--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
   </head>
+  <!--<header>-->
   <body id="top">
     <header>
       <div class="profile-page sidebar-collapse">
@@ -283,6 +284,7 @@
     </div>
   </div>
 </div>
+<!--
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
@@ -392,7 +394,8 @@
     </div>
   </div>
 </div>
-<div class="section" id="reference">
+-->
+<!--<div class="section" id="reference">
   <div class="container cc-reference">
     <div class="h4 mb-4 text-center title">References</div>
     <div class="card" data-aos="zoom-in">
@@ -440,7 +443,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
     <div class="container">
@@ -497,7 +500,7 @@
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">+1718-111-0011</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>anthony@company.com</p>
+                    <p>sulee0905@gmail.com</p>
                   </div>
                 </div>
               </div>
@@ -511,7 +514,7 @@
     </div>
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-      <div class="h4 title text-center">Anthony Barnett</div>
+      <div class="h4 title text-center">Sangyun Lee</div>
       <div class="text-center text-muted">
         <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
       </div>
