--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Sangyun Lee. Physicst.</p>
-            <p>I have studied nonequilbrium statistical physics of classical and quantum system.</p>
+            <p>I like understanding principles underneath various phenomena. I’m interested in nonequilibrium physics and quantum thermodynamics. I have studied quantum thermal devices to understanding the role of quantumness in thermodynamics. </p>
             <!--<p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>-->
           </div>
         </div>
@@ -323,8 +323,7 @@
           <div class="card-body">
             <div class="h5">Doctor of Phyilosophy in Physics</div>
             <p class="category">KAIST</p>
-            <p>I was in complex system and statistical physics Lab. Even though we know the physics laws in systems, dynamics of many-body systems cannot be easily solved. Those systems are named complex system. Statistical physics .
-              and the objects of statistical physics are notorious for difficulty.</p>
+            <p>I was in Complex Systems and Statistical Physics laboratory (CSSPL). Even with underneath microscopic physics laws, some systems cannot be predicted or can show emergent phenomena. The systems with these properties are name complex system. Statistical physics can suggest the methodology for solving complex systems. In statistical physics, scientists have developed various methodology and found physical laws can be applied to many-body systems in various scales. In CSSPL, I have studied statistical physics of nonequilibrium systems such as quantum heat engine and a particle immersed in a fluid.</p>
           </div>
         </div>
       </div>
@@ -341,7 +340,7 @@
           <div class="card-body">
             <div class="h5">Bachelor of Physics</div>
             <p class="category">Korea University</p>
-            <p>Physics is a science that deals with matters and spacetime. Physics findings laws of various objects. During 4 years, I had studied physics at Korea university in Seoul Anam-dong. </p>
+            <p>Physics is the science that deals with matters. From a few physical laws, the future of objects can be predicted. These objects include molecule, light, spacetime, and biological systems. During 4 years, at Korea University in Seoul Anam-dong, I had studied subjects of physics such as classical mechanics, quantum physics, statistical mechanics, solid-state physics, wave physics, etc. </p>
           </div>
         </div>
       </div>
